Design for team members

--- a/YMS/src/app/components/dashboard/team-member/team-member.component.html
+++ b/YMS/src/app/components/dashboard/team-member/team-member.component.html
@@ -1,3 +1,13 @@
-<p>
-  team-member works!
-</p>
+<title>
+    <input type="text" name="MyDashboard" value="Dashboard"></title>
+
+<p>Member name:</p>
+
+<form action="rating">
+    <input class="title" type="text" name="PO" placeholder="PO's happiness">
+    <br>
+    <input class="title" type="text" name="Rating team" placeholder="Team rating">
+    <br>
+    <input class="title" type="text" name="Rating myself" placeholder="My rating">
+    <br>
+</form>
