--- a/YSM/src/app/components/dashboard/team-leader/team-leader.component.html
+++ b/YSM/src/app/components/dashboard/team-leader/team-leader.component.html
@@ -1,9 +1,11 @@
 <div class="container-fluid ">
   <!-- Banner -->
   <div class="row">
+
     <div>
-      <h2>Dashboard</h2>
+      <h3>{{teamLeader.team}}</h3>
     </div>
+
   </div>
 
 
@@ -12,14 +14,27 @@
   <h2>Leader Name</h2>
 
   <!-- PO Happiness -->
-  <div class="row justify-content-center">PO Happiness</div>
+  <div class="row justify-content-center">
+    <div>
+      <i *ngIf="teamLeader.user === this.afAuth.auth.currentUser.uid && teamLeader.rating > 3" style="color:green" class="fa fa-5x fa-smile-o "
+        aria-hidden="true"></i>
+      <i *ngIf="teamLeader.user === this.afAuth.auth.currentUser.uid && teamLeader.rating === 3" style="color:yellow" class="fa fa-5x fa-meh-o "
+        aria-hidden="true"></i>
+      <i *ngIf="teamLeader.user === this.afAuth.auth.currentUser.uid && teamLeader.rating < 3" style="color:red" class="fa fa-5x fa-frown-o "
+        aria-hidden="true"></i>
+    </div>
+
+
+  </div>
 
   <!-- Team rating -->
   <div class="row ">
     <div class="col-md-12 d-flex justify-content-center">
       <div class="alert alert-success w-50">
         <h4>Team Rating: </h4>
-        <h3>5</h3>
+        <div>
+          <h3 *ngIf="teamLeader.user === this.afAuth.auth.currentUser.uid">{{teamLeader.rating}}</h3>
+        </div>
       </div>
     </div>
   </div>
@@ -29,7 +44,9 @@
     <div class="col-md-12 d-flex justify-content-center">
       <div class="alert alert-success w-50">
         <h4>My Rating: </h4>
-        <h3>5</h3>
+        <div>
+          <h3 *ngIf="teamLeader.user === this.afAuth.auth.currentUser.uid">{{teamLeader.rating}}</h3>
+        </div>
       </div>
     </div>
   </div>
@@ -37,8 +54,9 @@
   <!-- Edit Velocity -->
   <div class="row ">
     <div class="col-md-12">
-      <app-zippy  title="Edit Velocity">
-          <label for="">Edit Velocity</label> <input type="number" class="form-control" name="" id="">
+      <app-zippy title="Edit Velocity">
+        <label for="">Edit Velocity</label>
+        <input type="number" class="form-control" name="" id="">
       </app-zippy>
     </div>
   </div>
@@ -46,8 +64,9 @@
   <!-- Set Points -->
   <div class="row ">
     <div class="col-md-12">
-      <app-zippy  title="Set points">
-        <label for="">Edit Sprint Points: </label> <input type="number" class="form-control" name="" id="">
+      <app-zippy title="Set points">
+        <label for="">Edit Sprint Points: </label>
+        <input type="number" class="form-control" name="" id="">
       </app-zippy>
     </div>
   </div>
@@ -55,11 +74,13 @@
   <!-- Sprint Dates -->
   <div class="row ">
     <div class="col-md-12 ">
-      <app-zippy  title="Sprint Dates">
+      <app-zippy title="Sprint Dates">
 
-          <label for="">Start Date: </label> <input type="date" class="form-control mb-3" name="start-date" id="">
+        <label for="">Start Date: </label>
+        <input type="date" class="form-control mb-3" name="start-date" id="">
 
-          <label for="">End Date: </label> <input type="date" class="form-control" name="end-date" id="">
+        <label for="">End Date: </label>
+        <input type="date" class="form-control" name="end-date" id="">
 
       </app-zippy>
     </div>
