working stars and average

--- a/YSM/src/app/components/dashboard/dashboard.component.html
+++ b/YSM/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
 <!-- <app-manager></app-manager> -->
-<app-team-leader></app-team-leader>
+<!-- <app-team-leader></app-team-leader> -->
 <!-- <app-team-member></app-team-member> -->
+<router-outlet></router-outlet>
