--- a/YSM/src/app/components/dashboard/dashboard.component.html
+++ b/YSM/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
-<!-- <app-manager></app-manager> -->
-<app-team-leader></app-team-leader>
-<!-- <app-team-member></app-team-member> -->
+<button (click)="authentication.logout()" class="btn btn-dark m-1">Logout</button>
+<app-manager *ngIf="db.role == 'manager'"></app-manager>
+<app-team-leader *ngIf="db.role == 'leader'"></app-team-leader>
+<app-team-member *ngIf="db.role == 'member'"></app-team-member>
+<app-review *ngIf="db.role == 'po'"></app-review>
