--- a/YSM/src/app/components/team-ratings/team-ratings.component.html
+++ b/YSM/src/app/components/team-ratings/team-ratings.component.html
@@ -1,7 +1,7 @@
-<div class="row justify-content-center m-0 border p-2">
+<div class="row justify-content-center m-0 border p-2 bg-dark text-light">
     <h4 class="col-12">{{teamData.name}}</h4>
     <div class="col-md-6">
-        Average: {{teamData.rating/teamData.totalSprints}}
+        Average: {{average}}
     </div>
     <div class="col-md-6">
         Previous rating: {{teamData.previousRating}}
