design almost done.

--- a/YSM/src/app/components/dashboard/team-member/team-member.component.html
+++ b/YSM/src/app/components/dashboard/team-member/team-member.component.html
@@ -1,13 +1,13 @@
-<title>
-    <input type="text" name="MyDashboard" value="Dashboard"></title>
+<input class="dashboard" type="text" name="MyDashboard" placeholder="Dashboard">
+<br><br><br><br>
 
-<p>Member name:</p>
+<label for="name" type="text" value="MemberName">Member name:</label>
 
 <form action="rating">
-    <input class="title" type="text" name="PO" placeholder="PO's happiness">
+    <input [(ngModel)]="POsHappiness" class="title" type="text" name="PO" placeholder="PO's happiness">
     <br>
-    <input class="title" type="text" name="Rating team" placeholder="Team rating">
+    <input [(ngModel)]="TeamRating" class="title" type="text" name="Rating team" placeholder="Team rating">
     <br>
-    <input class="title" type="text" name="Rating myself" placeholder="My rating">
+    <input [(ngModel)]="Myrating" class="title" type="text" name="Rating myself" placeholder="My rating">
     <br>
 </form>
