--- a/YSM/src/app/components/dashboard/team-member/team-member.component.css
+++ b/YSM/src/app/components/dashboard/team-member/team-member.component.css
@@ -1,26 +1,41 @@
 background {
     position: relative;
-    width: 1074px;
+    width: 1600px;
     height: 760px;
+    margin-right: 50px;
     background-color: #FFFFFF;
+}
+
+.dashboard {
+    position: absolute;
+    width: 1074px;
+    height: 86px;
+    left: 0px;
+    top: 0px;
+    background: #C4C4C4;
 }
 
 .title {
     width: 1078px;
     height: 86px;
     margin-top: 30px;
+    margin-left: 200px;
+    margin-right: 100px;
+    color: #000000;
     background: #C4C4C4;
 }
 
-p {
+name {
     width: 202px;
     height: 48px;
     left: 58px;
     top: 136px;
     font-family: Saira SemiCondensed;
+    margin-left: 50px;
     font-style: normal;
     font-weight: normal;
     line-height: normal;
+    margin-right: 30px;
     font-size: 24px;
     color: #000000;
 }
@@ -32,8 +47,10 @@ rating {
     left: 200px;
     top: 200px;
     background: #C4C4C4;
+    color: #000000;
     margin-bottom: 50px;
-    padding-right: 25px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 text {
