--- a/YSM/src/app/components/review/review.component.css
+++ b/YSM/src/app/components/review/review.component.css
@@ -5,7 +5,7 @@
 
 .labels {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5em;
+    font-size: 1.55em;
 }
 
 fieldset,
@@ -36,8 +36,9 @@ h1 {
 }
 
 .rating>label:before {
+    margin-top: 4px;
     margin: 5px;
-    font-size: 1.25em;
+    font-size: 2.25em;
     font-family: FontAwesome;
     display: inline-block;
     content: "\f005";
