--- a/YSM/src/app/components/dashboard/team-leader/team-leader.component.html
+++ b/YSM/src/app/components/dashboard/team-leader/team-leader.component.html
@@ -1,67 +1,58 @@
-<div class="container-fluid ">
-  <!-- Banner -->
-  <div class="row">
-    <div class="col-md-6">
-      <h3 *ngIf="teamLeader">{{teamLeader.team}}</h3>
-    </div>
-    <div class="col-md-6 d-flex justify-content-end">
-    </div>
+<div class="container-fluid m-0">
+    <!-- Banner -->
+    <h3 *ngIf="teamLeader">{{teamLeader.team}}</h3>
+</div>
 
-  </div>
-
-  <div class="row">
+<div class="row m-0">
     <div class="col-md-6">
-      <h2>{{this.afAuth.auth.currentUser.displayName}}'s Dashboard</h2>
+        <h2>{{this.afAuth.auth.currentUser.displayName}}'s Dashboard</h2>
     </div>
-  </div>
+</div>
 
-  <!-- Edit Velocity -->
-  <div class="row ">
+<!-- Edit Velocity -->
+<div class="row m-0">
     <div class="col-md-6">
-      <div class="mb-2" *ngFor=" let team of db.teams | async">
-        <app-team-ratings *ngIf="teamLeader.team === team.name" [teamData]="team"></app-team-ratings>
-      </div>
-      <app-leaderboard></app-leaderboard>
+        <div class="mb-2" *ngFor=" let team of db.teams | async">
+            <app-team-ratings *ngIf="teamLeader.team === team.name" [teamData]="team"></app-team-ratings>
+        </div>
+        <app-leaderboard></app-leaderboard>
 
     </div>
 
     <div class="col-md-6">
-      <div id="accordion">
-        <div class="card">
-          <div class="card-header bg-dark" id="headingOne">
-            <h5 class="mb-0">
-              <button class="btn btn-link text-white" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+        <div id="accordion">
+            <div class="card">
+                <div class="card-header bg-dark" id="headingOne">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link text-white" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                 Velocity
               </button>
-            </h5>
-          </div>
+                    </h5>
+                </div>
 
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="card-body bg-dark">
-              <input *ngIf="team" [(ngModel)]="velocity" [value]="team.velocity" min="0" type="number" class="form-control" name="" id="">
-              <button class="btn btn-primary mt-2" type="submit" (click)="editVelocity(velocity)">Submit</button>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div class="card-body bg-dark">
+                        <input *ngIf="team" [(ngModel)]="velocity" [value]="team.velocity" min="0" type="number" class="form-control" name="" id="">
+                        <button class="btn btn-primary mt-2" type="submit" (click)="editVelocity(velocity)">Submit</button>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
 
-      <div class="mt-5 p-3 bg-dark">
-        <h4 class="text-white"> Sprint {{db.teamHighestSprint+1}}</h4>
-        <label class="text-white" for="">Sprint Points</label>
-        <input type="number" [(ngModel)]="sprintPoints" min="0" class="form-control" name="" id="">
+        <div class="mt-5 p-3 bg-dark">
+            <h4 class="text-white"> Sprint {{db.teamHighestSprint+1}}</h4>
+            <label class="text-white" for="">Sprint Points</label>
+            <input type="number" [(ngModel)]="sprintPoints" min="0" class="form-control" name="" id="">
 
-        <label class="text-white" for="">Sprint Start</label>
-        <input type="date" [(ngModel)]="startDate" class="form-control mb-3" name="start-date" id="">
+            <label class="text-white" for="">Sprint Start</label>
+            <input type="date" [(ngModel)]="startDate" class="form-control mb-3" name="start-date" id="">
 
-        <button class="btn btn-primary" (click)="newSprint(db.teamHighestSprint+1)">Start Sprint</button>
-        <button class="btn btn-primary" (click)="endSprint()">End Sprint</button>
+            <button class="btn btn-primary" (click)="newSprint(db.teamHighestSprint+1)">Start Sprint</button>
+            <button class="btn btn-primary" (click)="endSprint()">End Sprint</button>
 
-      </div>
+        </div>
 
 
     </div>
-
-  </div>
-
 
 </div>
