--- a/YSM/src/app/components/login/login.component.html
+++ b/YSM/src/app/components/login/login.component.html
@@ -1,8 +1,8 @@
-<div class="row justify-content-center m-0">
-    <div class="col-6">
-        <h1>LOGO</h1>
+<div class="row justify-content-center m-0 login">
+    <div class="col-6 leftBlock text-center">
+        <img src="../../../assets/nitro.png" alt="logo" class="mx-auto">
     </div>
-    <div [hidden]="submitted" class="col-6 p-5">
+    <div [hidden]="submitted" class="col-6 loginForm">
         <h1 class="text-center">Login</h1>
         <form (ngSubmit)="onSubmit()" #loginForm='ngForm'>
             <input class="form-control mt-5" placeholder="Email" email type="email" name="email" [(ngModel)]="email" #mail="ngModel" required/>
