--- a/YSM/src/app/components/dashboard/team-member/team-member.component.html
+++ b/YSM/src/app/components/dashboard/team-member/team-member.component.html
@@ -4,10 +4,16 @@
 <label for="name" type="text" value="MemberName">Member name:</label>
 
 <form action="rating">
-    <input [(ngModel)]="POsHappiness" class="title" type="text" name="PO" placeholder="PO's happiness">
+    <input [(ngModel)]="POsHappiness" class="title" type="text" name="PO's" placeholder="PO's happiness">
     <br>
-    <input [(ngModel)]="TeamRating" class="title" type="text" name="Rating team" placeholder="Team rating">
+    <input [(ngModel)]="TeamAverage" class="title" type="text" name="average's team" placeholder="Team average">
     <br>
-    <input [(ngModel)]="Myrating" class="title" type="text" name="Rating myself" placeholder="My rating">
+    <input [(ngModel)]="TeamsVelocity" class="title" type="text" name="Velocity" placeholder="Teams velocity">
+    <br>
+    <input [(ngModel)]="Scoreboard" class="title" type="text" name="SeeScoreboard" placeholder="Scoreboard">
+    <br>
+    <input [(ngModel)]="POsComments" class="title" type="text" name="PO'sComments" placeholder="PO's comments">
+    <br>
+    <input [(ngModel)]="TeamsVelocity" class="title" type="text" name="Velocity" placeholder="Teams velocity">
     <br>
 </form>
