team-member dash-board

--- a/YSM/src/app/components/dashboard/team-member/team-member.component.css
+++ b/YSM/src/app/components/dashboard/team-member/team-member.component.css
@@ -1,4 +1,4 @@
-background {
+/* background {
     position: relative;
     width: 1600px;
     height: 760px;
@@ -67,4 +67,4 @@ text {
     color: #000000;
     margin-top: 10px;
     margin-left: 40px;
-}
+} */
