--- a/YSM/src/app/components/dashboard/team-member/team-member.component.html
+++ b/YSM/src/app/components/dashboard/team-member/team-member.component.html
@@ -1,19 +1,19 @@
-<input class="dashboard" type="text" name="MyDashboard" placeholder="Dashboard">
-<br><br><br><br>
+<!-- <h2>{{team.name}} Dashboard</h2> -->
 
-<label for="name" type="text" value="MemberName">Member name:</label>
-
-<form action="rating">
-    <input [(ngModel)]="POsHappiness" class="title" type="text" name="PO's" placeholder="PO's happiness">
-    <br>
-    <input [(ngModel)]="TeamAverage" class="title" type="text" name="average's team" placeholder="Team average">
-    <br>
-    <input [(ngModel)]="TeamsVelocity" class="title" type="text" name="Velocity" placeholder="Teams velocity">
-    <br>
-    <input [(ngModel)]="Scoreboard" class="title" type="text" name="SeeScoreboard" placeholder="Scoreboard">
-    <br>
-    <input [(ngModel)]="POsComments" class="title" type="text" name="PO'sComments" placeholder="PO's comments">
-    <br>
-    <input [(ngModel)]="TeamsVelocity" class="title" type="text" name="Velocity" placeholder="Teams velocity">
-    <br>
-</form>
+<label for="name" type="text" value="MemberName">Member name:{{TeamMember.name}}</label>
+<app-user-ratings *ngIf="TeamMember.user === this.afAuth.auth.currentUser.uid" [userData]="TeamMember"></app-user-ratings>
+<app-team-ratings *ngIf="TeamMember.team === team.name" [teamData]="team"></app-team-ratings>
+<app-leaderboard></app-leaderboard>
+<!-- <form action="rating"> -->
+<!-- <input [(ngModel)]="POsHappiness" class="title" type="text" name="PO's" placeholder="PO's happiness">
+    <br> -->
+<!-- <input [(ngModel)]="TeamAverage" class="title" type="text" name="average's team" placeholder="Team average">
+    <br> -->
+<!-- <h2>{{TeamLeader.rating}}</h2> -->
+<!-- <input [(ngModel)]="Scoreboard" class="title" type="text" name="SeeScoreboard" placeholder="Scoreboard">
+    <br> -->
+<!-- <input [(ngModel)]="POsComments" class="title" type="text" name="PO'sComments" placeholder="PO's comments">
+    <br> -->
+<!-- <input [(ngModel)]="TeamsVelocity" class="title" type="text" name="Velocity" placeholder="Teams velocity">
+    <br> -->
+<!-- </form> -->
