--- a/YSM/src/app/components/dashboard/team-leader/team-leader.component.html
+++ b/YSM/src/app/components/dashboard/team-leader/team-leader.component.html
@@ -12,7 +12,7 @@
 <!-- Edit Velocity -->
 <div class="row m-0">
     <div class="col-md-6">
-        <div class="mb-2" *ngFor=" let team of db.teams | async">
+        <div class="my-2" *ngFor=" let team of db.teams | async">
             <app-team-ratings *ngIf="teamLeader.team === team.name" [teamData]="team"></app-team-ratings>
             <app-po-comment *ngIf="teamLeader.team === team.name" [team]="team.name"></app-po-comment>
         </div>
@@ -20,6 +20,21 @@
     </div>
 
     <div class="col-md-6">
+        <app-rate-teams></app-rate-teams>
+        <div class="my-2 p-3 bg-dark">
+            <h4 class="text-white"> Sprint {{db.teamHighestSprint+1}}</h4>
+            <label class="text-white" for="">Sprint Points</label>
+            <input type="number" [(ngModel)]="sprintPoints" min="0" class="form-control mb-3">
+
+            <label class="text-white" for="">Sprint Start</label>
+            <input type="date" [(ngModel)]="startDate" class="form-control mb-3" name="start-date" id="">
+
+            <label class="text-white" for="">Sprint End</label>
+            <input type="date" [(ngModel)]="endDate" class="form-control mb-3" name="start-date" id="">
+
+            <button class="btn btn-primary" (click)="newSprint(db.teamHighestSprint+1)">Start Sprint</button>
+            <button class="btn btn-primary" (click)="endSprint()">End Sprint</button>
+        </div>
         <div id="accordion">
             <div class="card">
                 <div class="card-header bg-dark" id="headingOne">
@@ -38,22 +53,5 @@
                 </div>
             </div>
         </div>
-
-        <div class="mt-5 p-3 bg-dark">
-            <h4 class="text-white"> Sprint {{db.teamHighestSprint+1}}</h4>
-            <label class="text-white" for="">Sprint Points</label>
-            <input type="number" [(ngModel)]="sprintPoints" min="0" class="form-control mb-3">
-
-            <label class="text-white" for="">Sprint Start</label>
-            <input type="date" [(ngModel)]="startDate" class="form-control mb-3" name="start-date" id="">
-
-            <label class="text-white" for="">Sprint End</label>
-            <input type="date" [(ngModel)]="endDate" class="form-control mb-3" name="start-date" id="">
-
-            <button class="btn btn-primary" (click)="newSprint(db.teamHighestSprint+1)">Start Sprint</button>
-            <button class="btn btn-primary" (click)="endSprint()">End Sprint</button>
-        </div>
-
     </div>
-
 </div>
