labels for rating

--- a/YSM/src/app/components/review/review.component.html
+++ b/YSM/src/app/components/review/review.component.html
@@ -8,7 +8,7 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <label class="labels ">rating of team (1-5):</label>
+                        <label class="labels ">Rating of team (1-5):</label>
                     </div>
                     <div class="col-md-6">
                         <fieldset class="rating">
@@ -22,7 +22,7 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <label class="labels">rate presentation of team (1-5):</label>
+                        <label class="labels">Rate presentation of team (1-5):</label>
                     </div>
                     <div class="col-md-6">
 
@@ -38,7 +38,7 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <label class="labels">rate work of team (1-5):</label>
+                        <label class="labels">Rate work of team (1-5):</label>
                     </div>
                     <div class="col-md-6">
                         <fieldset class="rating">
@@ -52,7 +52,7 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <label class="labels">rate your happiness:</label>
+                        <label class="labels">Rate your happiness:</label>
                     </div>
                     <div class="col-md-6">
                         <fieldset class="rating">
@@ -69,10 +69,10 @@
             <br>
             <div class="row">
                 <div class="col-md-6">
-                    <label class="labels">comment on review:</label>
+                    <label class="labels">Comment on review:</label>
                 </div>
                 <div class="col-md-6">
-                    <textarea [(ngModel)]="comment" class="form-control form-control-lg" type="textarea" placeholder="comment on review"></textarea>
+                    <textarea [(ngModel)]="comment" class="form-control form-control-lg" type="textarea" placeholder="Comment on review"></textarea>
                 </div>
             </div>
             <br>
